src/objects/Pan_Card__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pan Cards</relationshipLabel>
        <relationshipName>Pan_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <label>Father Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Pan_Card__c</fullName>
        <label>Name on Pan Card</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pan_Card_Number__c</fullName>
        <label>Pan Card Number</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pan Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pan Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pan Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>